into the jungle

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+ <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
@@ -27,7 +27,9 @@
              <hr>
            <h3>Full-Stack Developer</h3>
               <a href="http://www.linkedin.com" style="font-size:42px"><i class="fa fa-linkedin"></i></a>
-              <a href="http://www.gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a>
+              <a href="http://www.gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a><br>
+
+              <p>" i’ve become accomplished in many different libraries and frameworks and being able to develop full-stack web applications. I thoroughly enjoy challenging myself, learning new things and solving complex problems, it gives me a great sense of accomplishment. "</p>
              <h1>JOHN ESPINOZA</h1>
           </header>
        </div>
@@ -45,9 +47,9 @@
    <span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
           <h1 id="r-text">Experience</h1>
             <p>GENERAL ASSEMBLY"<br>Web Development Immersive</p>
-            <p>What is Lorem Ipsum?<br>Web Development Immersive</p>
-            <p>What is Lorem Ipsum?<br>Web Development Immersive</p>
-            <p>What is Lorem Ipsum?<br>Web Development Immersive</p>
+            <p>Hack-Athon 2015<br>Lehman Collage</p>
+            <p>Living In New York<br></p>
+            <p>Motorcyclist Enthusiast<br></p>
 
 
 <div class="second-wall">
@@ -59,7 +61,8 @@
 </div>
 
 <div class="Rouge_one">
-  <h2>Bages</h2>
+<p>Bages</p>
+ <!--  <h2>Bages</h2> -->
   <div id="bages">
   <ul>
     <li><a href="" class="btn btn-5">HTML</a></li>
