--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="http://www.linkedin.com" style="font-size:42px"><i class="fa fa-linkedin"></i></a>
               <a href="http://www.gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a><br>
 
-              <p>" i’ve become accomplished in many different libraries and frameworks and being able to develop full-stack web applications. I thoroughly enjoy challenging myself, learning new things and solving complex problems, it gives me a great sense of accomplishment. "</p>
+              <p><strong>" i’ve become accomplished in many different libraries and frameworks and being able to develop full-stack web applications. I thoroughly enjoy challenging myself, learning new things and solving complex problems, it gives me a great sense of accomplishment. "</strong></p>
              <h1>JOHN ESPINOZA</h1>
           </header>
        </div>
