--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    <span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
           <h1 id="r-text">Experience</h1>
             <p>GENERAL ASSEMBLY"<br>Web Development Immersive</p>
-            <p>Hack-Athon 2015<br>Lehman Collage</p>
+            <p>Hack-Athon 2015<br>Lehman College</p>
             <p>Living In New York<br></p>
             <p>Motorcyclist Enthusiast<br></p>
 
