--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
          <br>
         <button type="">Submit</button>
           <br>
-      <a href="http://www.linkedin.com" style="font-size:30px;margin-left: 282px;margin-top: 20px;"><i class="fa fa-linkedin"></i></a>
-      <a href="http://www.gmail.com"    style="font-size:30px;margin-left: 272px;"></a>
+      <a href="https://www.linkedin.com/in/john-espinoza" style="font-size:30px;margin-left: 282px;margin-top: 20px;"><i class="fa fa-linkedin"></i></a>
+      <a href="mailto:johne3741@gmail.com"    style="font-size:30px;margin-left: 272px;"></a>
+
+
     </div>
 </div>
 <!-- Our hamburger button -->
