--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div class="container">
 
-   <span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
+   <span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;press and scroll down</span>
           <h1 id="r-text">Experience</h1>
             <p>GENERAL ASSEMBLY"<br>Web Development Immersive</p>
             <p>Hack-Athon 2015<br>Lehman College</p>
