back to the future with colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&Ouml;</a>
+    <a href="javascript:void(0)" style="color:#088A29" class="closebtn" onclick="closeNav()">&Ouml;</a>
        <div id="main">
           <header id="header">
              <hr>
