--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
           <header id="header">
              <hr>
            <h3>Full-Stack Developer</h3>
-              <a href="http://www.linkedin.com" style="font-size:42px"><i class="fa fa-linkedin"></i></a>
-              <a href="http://www.gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a><br>
+              <a href="https://www.linkedin.com/in/john-espinoza" style="font-size:42px"><i class="fa fa-linkedin"></i></a>
+              <a href="mailto:johne3741@gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a><br>
+              <a href="https://github.com/johnlovespi" style="font-size:42px"><i class="fa fa-github" aria-hidden="true"></i></a><br>
+              <a href="http://codepen.io/JOHNESPINOZA/" style="font-size:42px"><i class="fa fa-codepen" aria-hidden="true"></i></a><br>
 
               <p><strong>" i’ve become accomplished in many different libraries and frameworks and being able to develop full-stack web applications. I thoroughly enjoy challenging myself, learning new things and solving complex problems, it gives me a great sense of accomplishment. "</strong></p>
              <h1>JOHN ESPINOZA</h1>
