--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
              <hr>
            <h3>Full-Stack Developer</h3>
               <a href="https://www.linkedin.com/in/john-espinoza" style="font-size:42px"><i class="fa fa-linkedin"></i></a>
-              <a href="mailto:johne3741@gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a><br>
-              <a href="https://github.com/johnlovespi" style="font-size:42px"><i class="fa fa-github" aria-hidden="true"></i></a><br>
+              <a href="mailto:johne3741@gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a>
+              <a href="https://github.com/johnlovespi" style="font-size:42px"><i class="fa fa-github" aria-hidden="true"></i></a>
               <a href="http://codepen.io/JOHNESPINOZA/" style="font-size:42px"><i class="fa fa-codepen" aria-hidden="true"></i></a><br>
 
               <p><strong>" i’ve become accomplished in many different libraries and frameworks and being able to develop full-stack web applications. I thoroughly enjoy challenging myself, learning new things and solving complex problems, it gives me a great sense of accomplishment. "</strong></p>
@@ -44,58 +44,45 @@
 </div>
 
 
-<div class="container">
+<section class="container">
 
-   <span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
-          <h1 id="r-text">Experience</h1>
-            <p>GENERAL ASSEMBLY"<br>Web Development Immersive</p>
-            <p>Hack-Athon 2015<br>Lehman College</p>
-            <p>Living In New York<br></p>
-            <p>Motorcyclist Enthusiast<br></p>
+</section>
 
+<section class="second-wall">
+<span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
 
-<div class="second-wall">
-      <h2 id="w-text">Portfolio</h2>
-         <img class="mySlides" src="images/projectOne.png">
+    <h2 id="w-text">Portfolio</h2>
+         <a href=" "><img class="mySlides" src="images/projectOne.png"></a>
          <img class="mySlides" src="images/projectTwo.png">
-         <img class="mySlides" src="images/projectThree.png">
+         <img class="mySlides" src="images/FullSizeRender2.jpg">
+         <a href="cruzinc.herokuapp.com"><img class="mySlides" src="images/IMG_0018.JPG"></a>
 
-</div>
+</section>
 
-<div class="Rouge_one">
-<p>Bages</p>
- <!--  <h2>Bages</h2> -->
-  <div id="bages">
-  <ul>
-    <li><a href="" class="btn btn-5">HTML</a></li>
-    <li><a href="" class="btn btn-5">CSS</a></li>
-    <li><a href="" class="btn btn-5">React</a></li>
-    <li><a href="" class="btn btn-5">Node.js</a></li>
-    <li><a href="" class="btn btn-5">JS</a></li>
-    <li><a href="" class="btn btn-5">PostgreSQL</a></li>
-    <li><a href="" class="btn btn-5">Jquery</a></li>
-  </ul>
-
-  </div>
+<section class="Rouge_one">
 
 
-</div>
-<div class="third_wall">
-      <p><strong>Get In</strong>touch</p>
-        <input class="user" type="text" name="First_name" placeholder="Your name">
-        <input class="user" type="text" name="Last_name" placeholder="Email">
-        <input class="user" type="text" name="Email" placeholder="Subject">
-        <input class="usertext" type="text" name="Text" placeholder="Your Message">
-         <br>
-        <button type="">Submit</button>
-          <br>
-      <a href="https://www.linkedin.com/in/john-espinoza" style="font-size:30px;margin-left: 282px;margin-top: 20px;"><i class="fa fa-linkedin"></i></a>
-      <a href="mailto:johne3741@gmail.com"    style="font-size:30px;margin-left: 272px;"></a>
+  <b>
+  <span1>
+<h4>skills</h4>
+    <ul>
+      <li><a href="" class="btn btn-5"><span></span>HTML</a></li>
+      <li><a href="" class="btn btn-5">CSS</a></li>
+      <li><a href="" class="btn btn-5">React</a></li>
+      <li><a href="" class="btn btn-5">Node.js</a></li>
+      <li><a href="" class="btn btn-5">JS</a></li>
+      <li><a href="" class="btn btn-5">PostgreSQL</a></li>
+      <li><a href="" class="btn btn-5">Jquery</a></li>
+    </ul>
+  </span1>
+  </b>
+  </section>  s
+
+<section class="third_wall">
 
 
-    </div>
-</div>
-<!-- Our hamburger button -->
+</section>
+
 
 </body>
 
