added links to imgs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="https://www.linkedin.com/in/john-espinoza" style="font-size:42px"><i class="fa fa-linkedin"></i></a>
               <a href="mailto:johne3741@gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a>
               <a href="https://github.com/johnlovespi" style="font-size:42px"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a href="http://codepen.io/JOHNESPINOZA/" style="font-size:42px"><i class="fa fa-codepen" aria-hidden="true"></i></a><br>
+              <a href="https://codepen.io/JOHNESPINOZA/" style="font-size:42px"><i class="fa fa-codepen" aria-hidden="true"></i></a><br>
 
               <p><strong>" i’ve become accomplished in many different libraries and frameworks and being able to develop full-stack web applications. I thoroughly enjoy challenging myself, learning new things and solving complex problems, it gives me a great sense of accomplishment. "</strong></p>
              <h1>JOHN ESPINOZA</h1>
@@ -49,13 +49,12 @@
 </section>
 
 <section class="second-wall">
-<span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
 
     <h2 id="w-text">Portfolio</h2>
          <a href=" "><img class="mySlides" src="images/projectOne.png"></a>
-         <img class="mySlides" src="images/projectTwo.png">
-         <img class="mySlides" src="images/FullSizeRender2.jpg">
-         <a href="cruzinc.herokuapp.com"><img class="mySlides" src="images/IMG_0018.JPG"></a>
+         <a href="http://postjobs.herokuapp.com/"><img class="mySlides" src="images/projectTwo.png"></a>
+         <a href="foreveramourbridal.com"><img class="mySlides" src="images/FullSizeRender2.jpg"></a>
+         <a href="http://cruzinc.herokuapp.com"><img class="mySlides" src="images/IMG_0018.JPG"></a>
 
 </section>
 
@@ -79,6 +78,14 @@
   </section>  s
 
 <section class="third_wall">
+<ul>
+    <li>GENERAL ASSEMBLY</li>
+     <li>Web Development Immersive</li>
+      <li>Lehman College</li>
+       <li>Motorcyclist Enthusiast</li>
+</ul>
+<span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
+
 
 
 </section>
