--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <section class="second-wall">
 
     <h2 id="w-text">Portfolio</h2>
-         <a href=" "><img class="mySlides" src="images/projectOne.png"></a>
+         <a href="file:///Users/JohnEspinoza/Desktop/WOD/index.html"><img class="mySlides" src="images/projectOne.png"></a>
          <a href="http://postjobs.herokuapp.com/"><img class="mySlides" src="images/projectTwo.png"></a>
          <a href="foreveramourbridal.com"><img class="mySlides" src="images/FullSizeRender2.jpg"></a>
          <a href="http://cruzinc.herokuapp.com"><img class="mySlides" src="images/IMG_0018.JPG"></a>
@@ -63,7 +63,7 @@
 
   <b>
   <span1>
-<h4>skills</h4>
+<h3>skills</h3>
     <ul>
       <li><a href="" class="btn btn-5"><span></span>HTML</a></li>
       <li><a href="" class="btn btn-5">CSS</a></li>
@@ -78,6 +78,7 @@
   </section>  s
 
 <section class="third_wall">
+<h1>Achievements</h1>
 <ul>
     <li>GENERAL ASSEMBLY</li>
      <li>Web Development Immersive</li>
@@ -107,7 +108,7 @@ function carousel() {
     slideIndex++;
     if (slideIndex > x.length) {slideIndex = 1}
     x[slideIndex-1].style.display = "block";
-    setTimeout(carousel, 2800); // Change image every 2 seconds
+    setTimeout(carousel, 2900); // Change image every 2 seconds
 }
   </script>
 </html>
