--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <b>
   <span1>
-<h3>skills</h3>
+/
     <ul>
       <li><a href="" class="btn btn-5"><span></span>HTML</a></li>
       <li><a href="" class="btn btn-5">CSS</a></li>
@@ -78,7 +78,7 @@
   </section>  s
 
 <section class="third_wall">
-<h1>Achievements</h1>
+<!-- <h1>Achievements</h1> -->
 <ul>
     <li>GENERAL ASSEMBLY</li>
      <li>Web Development Immersive</li>
