new site EVERYTHING

--- a/index.html
+++ b/index.html
@@ -18,97 +18,89 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>JohnEspinoza</title>
  </head>
-<body>
+ <body>
 
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" style="color:#088A29" class="closebtn" onclick="closeNav()">&Ouml;</a>
-       <div id="main">
-          <header id="header">
-             <hr>
-           <h3>Full-Stack Developer</h3>
-              <a href="https://www.linkedin.com/in/john-espinoza" style="font-size:42px"><i class="fa fa-linkedin"></i></a>
-              <a href="mailto:johne3741@gmail.com" style="font-size:42px"><i class="fa fa-envelope"></i></a>
-              <a href="https://github.com/johnlovespi" style="font-size:42px"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a href="https://codepen.io/JOHNESPINOZA/" style="font-size:42px"><i class="fa fa-codepen" aria-hidden="true"></i></a><br>
+<div class="bgimg-1">
+  <div class="caption">
+    <span class="border">JOHN ESPINOZA</span>
+  </div>
+</div>
 
-              <p><strong>" i’ve become accomplished in many different libraries and frameworks and being able to develop full-stack web applications. I thoroughly enjoy challenging myself, learning new things and solving complex problems, it gives me a great sense of accomplishment. "</strong></p>
-             <h1>JOHN ESPINOZA</h1>
-          </header>
-       </div>
+<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+  <h3 style="text-align:center;">Full-Stack Developer</h3>
+  <p>Hi, my name is John Espinoza. I'm a Creative Technologist and Software Developer envisioning and producing the future of technology interface. I'm interested in a position where I can use my Software Development skills to make an impact that I can see with my own eyes. Of course, the position is only part of the equation. Being at a company where I can grow and work toward something I care about.
+I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and quickly assimilate new concepts. A highly analytical thinker with a demonstrated talent for identifying, scrutinizing, improving, and streamlining complex work processes.  I'm not afraid of failure. It is an essential part of the process that brings you to success. I believe that my focus, determination, perseverance and attention to detail combined with my extensive knowledge of Software Development and my ability to quickly pick up new technologies makes me an exceptional choice for the Software Development Engineer position. </p>
+</div>
 
-       <div id="hamburger-button">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
+<div class="bgimg-2">
+  <div class="caption">
+    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PROJECTS</span>
+  </div>
+</div>
+
+<div style="position:relative;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:5px 20px;text-align: justify;">
+   <div class="article">
+    <img src="images/IMG_0018.JPG" />
+    <h2>Cruzpaints inc</h2>
+  </div>
+    <div class="article">
+    <img src="FullSizeRender2.jpg" />
+    <h2>Foreveramore Bridal</h2>
+  </div>
+
+    <div class="article">
+    <img src="images/projectThree.png" />
+    <h2>Post Jobs</h2>
+  </div>
+     <div class="article">
+    <img src="images/projectOne.png" />
+    <h2>CarInformer</h2>
+  </div>
+     <div class="article">
+    <img src="images/projectTwo.png" />
+    <h2>Project:World of Distructions</h2>
+  </div>
+
+     <div class="article">
+    <img src="images/hodedah.jpg" />
+    <h2>Hodedah Inc</h2>
+  </div>
+
+  </div>
+</div>
+
+<div class="bgimg-3">
+  <div class="caption">
+    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SKILLS</span>
+  </div>
+</div>
+
+<div style="position:relative;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+    <div class="wrapper">
+  <ul>
+    <li class="facebook"><p>React.js<p><i  aria-hidden="true"></i></li>
+    <li class="twitter"><p>Node.js<p><i aria-hidden="true"></i></li>
+    <li class="instagram"><p>HTML5<p><i aria-hidden="true"></i></li>
+    <li class="google"><p>CSS<p><i aria-hidden="true"></i></li>
+    <li class="whatsapp"><p>Jquery<p><i aria-hidden="true"> </i></li>
+  </ul>
 </div>
 
 
-<section class="container">
+  </div>
+</div>
 
-</section>
-
-<section class="second-wall">
-
-    <h2 id="w-text">Portfolio</h2>
-         <a href="file:///Users/JohnEspinoza/Desktop/WOD/index.html"><img class="mySlides" src="images/projectOne.png"></a>
-         <a href="http://postjobs.herokuapp.com/"><img class="mySlides" src="images/projectTwo.png"></a>
-         <a href="foreveramourbridal.com"><img class="mySlides" src="images/FullSizeRender2.jpg"></a>
-         <a href="http://cruzinc.herokuapp.com"><img class="mySlides" src="images/IMG_0018.JPG"></a>
-
-</section>
-
-<section class="Rouge_one">
-
-
-  <b>
-  <span1>
-/
-    <ul>
-      <li><a href="" class="btn btn-5"><span></span>HTML</a></li>
-      <li><a href="" class="btn btn-5">CSS</a></li>
-      <li><a href="" class="btn btn-5">React</a></li>
-      <li><a href="" class="btn btn-5">Node.js</a></li>
-      <li><a href="" class="btn btn-5">JS</a></li>
-      <li><a href="" class="btn btn-5">PostgreSQL</a></li>
-      <li><a href="" class="btn btn-5">Jquery</a></li>
-    </ul>
-  </span1>
-  </b>
-  </section>  s
-
-<section class="third_wall">
-<!-- <h1>Achievements</h1> -->
-<ul>
-    <li>GENERAL ASSEMBLY</li>
-     <li>Web Development Immersive</li>
-      <li>Lehman College</li>
-       <li>Motorcyclist Enthusiast</li>
-</ul>
-<span class="openbtn" style="font-size:40px" onclick="openNav()">&raquo;</span>
-
-
-
-</section>
-
+<div class="bgimg-1">
+  <div class="caption">
+    <span class="border">COOL!</span>
+  </div>
+</div>
 
 </body>
 
 
-  <script>
-    var slideIndex = 0;
-carousel();
-function carousel() {
-  // console.log('here');
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-     for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none";
-    }
-    slideIndex++;
-    if (slideIndex > x.length) {slideIndex = 1}
-    x[slideIndex-1].style.display = "block";
-    setTimeout(carousel, 2900); // Change image every 2 seconds
-}
-  </script>
+
+
 </html>
