fixing moblie images rendering

--- a/newIndex.html
+++ b/newIndex.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
 
 <div class="bgimg-1">
   <div class="caption">
@@ -43,3 +43,4 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 </div>
 
 </body>
+ -->
