--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 </div>
 
 <div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:5px 20px;text-align: justify;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;text-align: justify;">
    <div class="article">
     <img src="images/IMG_0018.JPG" />
     <h2>Cruzpaints inc</h2>
