--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
   </div>
 </div>
 
-
+<div style="position:relative;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;text-align: justify;">
    <div class="article">
     <img src="images/IMG_0018.JPG" />
     <h2>Cruzpaints inc</h2>
@@ -66,7 +67,8 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
     <h2>Hodedah Inc</h2>
   </div>
 
-
+  </div>
+</div>
 
 <div class="bgimg-3">
   <div class="caption">
