--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 <div class="bgimg-2">
   <div class="caption">
     <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PROJECTS</span>
-  </div>
-</div>
+<!--   </div>
+</div> -->
 
-<div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;text-align: justify;">
+<!-- <div style="position:relative;"> -->
+  <!-- <div style="color:#ddd;background-color:#282E34;text-align:center;text-align: justify;"> -->
    <div class="article">
     <img src="images/IMG_0018.JPG" />
     <h2>Cruzpaints inc</h2>
