--- a/index.html
+++ b/index.html
@@ -35,40 +35,69 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 <div class="bgimg-2">
   <div class="caption">
     <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PROJECTS</span>
-<!--   </div>
-</div> -->
+  </div>
+</div>
 
-<!-- <div style="position:relative;"> -->
-  <!-- <div style="color:#ddd;background-color:#282E34;text-align:center;text-align: justify;"> -->
-   <div class="article">
+
+
+<div class="bgimg-1">
+  <div class="caption">
+
     <img src="images/IMG_0018.JPG" />
     <h2>Cruzpaints inc</h2>
-  </div>
-    <div class="article">
-    <img src="FullSizeRender2.jpg" />
-    <h2>Foreveramore Bridal</h2>
-  </div>
-
-    <div class="article">
-    <img src="images/projectThree.png" />
-    <h2>Post Jobs</h2>
-  </div>
-     <div class="article">
-    <img src="images/projectOne.png" />
-    <h2>CarInformer</h2>
-  </div>
-     <div class="article">
-    <img src="images/projectTwo.png" />
-    <h2>Project:World of Distructions</h2>
-  </div>
-
-     <div class="article">
-    <img src="images/hodedah.jpg" />
-    <h2>Hodedah Inc</h2>
-  </div>
 
   </div>
 </div>
+
+<div class="bgimg-1">
+  <div class="caption">
+    <img src="FullSizeRender2.jpg" />
+    <h2>Foreveramore Bridal</h2>
+
+  </div>
+</div>
+
+<div class="bgimg-1">
+  <div class="caption">
+    <img src="images/projectThree.png" />
+    <h2>Post Jobs</h2>
+  </div>
+</div>
+
+<div class="bgimg-1">
+  <div class="caption">
+    <img src="images/projectThree.png" />
+    <h2>Post Jobs</h2>
+  </div>
+</div>
+
+
+  <div class="bgimg-1">
+  <div class="caption">
+  <img src="images/projectOne.png" />
+    <h2>CarInformer</h2>
+  </div>
+</div>
+
+
+  <div class="bgimg-1">
+  <div class="caption">
+    <img src="images/projectTwo.png" />
+    <h2>Project:World of Distructions</h2>
+  </div>
+</div>
+
+
+    <div class="bgimg-1">
+  <div class="caption">
+<img src="images/hodedah.jpg" />
+    <h2>Hodedah Inc</h2>
+  </div>
+</div>
+
+
+
+
 
 <div class="bgimg-3">
   <div class="caption">
