--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <script type="text/javascript" src="script.js"></script>
   <meta charset="utf-8">
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible"  content="IE=edge">
   <title>JohnEspinoza</title>
  </head>
  <body>
 
 <div class="bgimg-1">
   <div class="caption">
-    <span class="border">JOHN ESPINOZA</span>
+    <span class="border">JOHN K ESPINOZA</span>
   </div>
 </div>
 
@@ -41,9 +41,6 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 
 
 
-
-
-
 <div class="bgimg-3">
   <div class="caption">
     <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SKILLS</span>
@@ -51,19 +48,17 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 </div>
 
 <div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 100px;text-align: justify;">
     <div class="wrapper">
   <ul>
-    <li class="facebook"><p>React.js<p><i  aria-hidden="true"></i></li>
-    <li class="twitter"><p>Node.js<p><i aria-hidden="true"></i></li>
-    <li class="instagram"><p>HTML5<p><i aria-hidden="true"></i></li>
-    <li class="google"><p>CSS<p><i aria-hidden="true"></i></li>
-    <li class="whatsapp"><p>Jquery<p><i aria-hidden="true"> </i></li>
+    <li class="facebook"><p>React.js</p><i  aria-hidden="true"></i></li>
+    <li class="twitter"><p>Node.js</p><i aria-hidden="true"></i></li>
+    <li class="instagram"><p>HTML5</p><i aria-hidden="true"></i></li>
+    <li class="google"><p>CSS</p><i aria-hidden="true"></i></li>
+    <li class="whatsapp"><p>Jquery</p><i aria-hidden="true"> </i></li>
   </ul>
 </div>
-
-
-  </div>
+</div>
 </div>
 
 <div class="bgimg-1">
