--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="bgimg-1">
   <div class="caption">
-    <span class="border">JOHN K ESPINOZA</span>
+    <span class="border">JOHN ESPINOZA</span>
   </div>
 </div>
 
@@ -33,8 +33,21 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 </div>
 
 <div class="bgimg-2">
-  <div class="caption">
-    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PROJECTS</span>
+  <div class="caption_two">
+    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PROJECTS
+    </span>
+    <div class="project_imgs">
+      <ul>
+
+        <img src="./images/hodedah.jpg" alt="">
+
+        <img src="./images/Foreveramor.jpg" alt="">
+
+        <img src="./images/cruzinc.jpg" alt="">
+
+      </ul>
+
+    </div>
   </div>
 </div>
 
