--- a/index.html
+++ b/index.html
@@ -20,18 +20,24 @@
  </head>
  <body>
 
+ <!-- First Window -->
 <div class="bgimg-1">
   <div class="caption">
     <span class="border">JOHN ESPINOZA</span>
   </div>
 </div>
+<!-- End first Window -->
 
+<!-- Second Window  -->
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <h3 style="text-align:center;">Full-Stack Developer</h3>
   <p>Hi, my name is John Espinoza. I'm a Creative Technologist and Software Developer envisioning and producing the future of technology interface. I'm interested in a position where I can use my Software Development skills to make an impact that I can see with my own eyes. Of course, the position is only part of the equation. Being at a company where I can grow and work toward something I care about.
 I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and quickly assimilate new concepts. A highly analytical thinker with a demonstrated talent for identifying, scrutinizing, improving, and streamlining complex work processes.  I'm not afraid of failure. It is an essential part of the process that brings you to success. I believe that my focus, determination, perseverance and attention to detail combined with my extensive knowledge of Software Development and my ability to quickly pick up new technologies makes me an exceptional choice for the Software Development Engineer position. </p>
 </div>
 
+<!-- End Second Window  -->
+
+<!-- Third Window -->
 <div class="bgimg-2">
   <div class="caption_two">
     <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">PROJECTS
@@ -39,11 +45,11 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
     <div class="project_imgs">
       <ul>
 
-        <img src="./images/hodedah.jpg" alt="">
+        <a href="http://www.hodedah.com/"><img src="./images/hodedah.jpg" alt=""></a>
 
-        <img src="./images/Foreveramor.jpg" alt="">
+        <a href="http://thebridalsalonnyc.com/"><img src="./images/Foreveramor.jpg" alt=""></a>
 
-        <img src="./images/cruzinc.jpg" alt="">
+         <a href="https://cruzinc.herokuapp.com/"><img src="./images/cruzinc.jpg" alt=""></a>
 
       </ul>
 
@@ -51,9 +57,9 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
   </div>
 </div>
 
+<!-- End Third window -->
 
-
-
+<!-- Fourth Window  -->
 <div class="bgimg-3">
   <div class="caption">
     <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SKILLS</span>
@@ -73,6 +79,8 @@ I’m an enthusiastic knowledge-hungry learner, eager to meet challenges and qui
 </div>
 </div>
 </div>
+
+<!-- last window -->
 
 <div class="bgimg-1">
   <div class="caption">
